--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "prisma generate",
+    "migrate:deploy": "prisma migrate deploy && prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
