--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.5.4",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
